# content_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_PHASE_0.md  DEPLOYMENT.md  FINAL_VALIDATION_REPORT.json  FULL_AUDIT_RETEST.md  INFRASTRUCTURE_VALIDATION_REPORT.md  Makefile  PERSISTENCE_VALIDATION_REPORT.md  PHASE_2_3_RETEST_REPORT.md  PHASE_4_AUDIT_REPORT.md  PHASE_8_IMPLEMENTATION_PLAN.md  PROJECT.md  README.md  RETEST_REPORT.md  UI_GUIDE.md  audit_step1.py  audit_step1_report.json  check_db_status.py  docker-compose.yml  find_db.py  generate_final_report.py  index.html  k8s-deployment.yaml  package-lock.json  package.json  phase1_health_report.json  phase3_validation_report_final.json  test_all_providers.py  test_content_types.py  test_db_advanced_v2.py  test_e2e_mocked.py  test_e2e_pipeline.py  test_providers.py
backend/: .env.example  BACKEND_INTEGRATION_GUIDE.md  DEPLOYMENT_SCRIPTS.md  Dockerfile  FRONTEND_DEVELOPMENT_PROMPT.md  QUICKSTART.md  QUICK_START_GUIDE.md  UI_COMPONENT_LIBRARY.md  alembic.ini  audit_phase5.py  check_tables.py  openapi_test.json  pyproject.toml  requirements.txt  startup.sh  test_db_advanced.py  test_integration_phase4_5.py  test_phase5_comprehensive.py  validate_infra.py  verified_ai.db-journal  verify_phase5.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/docs/: phase4_agent_runtime.md  phase5_research_intelligence.md
backend/scripts/: validate_phase1.py  validate_phase3.py  validate_phase3_isolated.py  validate_phase4_quality.py
backend/tests/: conftest.py  test_api_contracts.py  test_context_compressor.py  test_contract_alignment.py  test_datetime_utils.py  test_health.py  test_models.py  test_new_architecture.py  test_pipeline_agents.py  test_pipeline_api.py  test_pipeline_graph.py  test_pipeline_prompts.py  (+9 more)
(+543 files in other folders)
