[project]
name = "ai-content-intel-api"
version = "1.0.0"
description = "AI Content Intelligence Platform — Backend API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "ARG"]
ignore = [
    "ARG001",    # Unused function argument — common FastAPI shared-signature pattern
    "ARG002",    # Unused method argument — common FastAPI shared-signature pattern
    "ARG005",    # Unused lambda argument — harmless
    "B008",      # Depends/Query in defaults — required by FastAPI
    "B024",      # ABC without abstract methods — base class pattern
    "B904",      # raise-without-from-inside-except — intentional in many cases
    "N818",      # Exception name suffix — existing pattern
    "SIM102",    # Collapsible if — readability preference
    "SIM103",    # Needless bool — readability preference
    "SIM105",    # suppressible-exception — readability preference
    "SIM117",    # Multiple with statements — readability preference
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
